--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
 								<input type="email" name="email" class="form-control" id="contact-email" placeholder="Email" required>
 							</div>
 							<div class="form-group">
-								<input type="phone" name="phone" class="form-control" id="contact-fono" placeholder="Cel" required>
+								<input type="phone" name="fono" class="form-control" id="contact-fono" placeholder="Cel" required>
 							</div>
 							<div class="form-group">
 								<input type="text" name="subject" class="form-control" id="contact-subject" placeholder="Producto de tu interés 'SHD315'"
